# task-api

./: .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
config/: settings.py  urls.py
http_requests/: auth.http  http-client.env.json  tasks.http
tasks/: admin.py  apps.py  models.py  serializers.py
tasks/api/v1/: register.py  tasks.py  urls.py
tasks/migrations/: 0001_initial.py
tasks/tests/: test_tasks.py
